Back-end: started Swagger documentation in Health and Users coontrollers
