# Back-end/Paradigm.Express.WebApi.Bootstrap-main/src/controllers/users.controller.ts
@@ -2,14 +2,17 @@ import { Action, ApiController, Controller, HttpMethod } from "@miracledevs/para
 import { User } from "../models/user";
 import { UsersRepository } from "../repositories/users.repository";
 import { InsertionResult } from "../core/repositories/commands/db.command";
+import { DELETE, GET, POST, PUT, Path, PathParam } from "typescript-rest";
 
 
+@Path( "/users" )
 @Controller({ route: "/api/users" })
 export class UsersController extends ApiController {
     constructor(private repo: UsersRepository) {
         super();
     }
 
+    @GET
     @Action({ route: "/" })
     async get(): Promise<User[]> {
         try {
@@ -21,8 +24,10 @@ export class UsersController extends ApiController {
         }
     }
 
+    @GET
+    @Path(":id")
     @Action({ route: "/:id" })
-    async getOne(id: number): Promise<User> {
+    async getOne(@PathParam("id") id: number): Promise<User> {
         try {
             return this.repo.getById(id);
         } catch (error) {
@@ -32,29 +37,46 @@ export class UsersController extends ApiController {
         }
     }
 
+    @POST
     @Action({ route: "/", fromBody: true })
-    async post(user: User): Promise<User>{
-        try{
+    async post(user: User): Promise<User> {
+        try {
             const metadata: InsertionResult<number> = await this.repo.insertOne(user);
             user.id = metadata.insertId;
             this.httpContext.response.sendStatus(201);
             return user;
-        } catch(error){
+        } catch (error) {
             console.log(error);
             this.httpContext.response.sendStatus(500);
             return;
         }
     }
 
-    @Action({ route: "/", method: HttpMethod.PUT , fromBody: true })
+    @PUT
+    @Action({ route: "/", method: HttpMethod.PUT, fromBody: true })
     async update(user: User): Promise<User> {
-        try{
+        try {
             this.httpContext.response.sendStatus(200);
             return this.repo.update(user);
-        } catch(error){
+        } catch (error) {
             console.log(error);
             this.httpContext.response.sendStatus(500);
             return;
+        }
+    }
+
+    @DELETE
+    @Path(":id")
+    @Action({ route: "/:id" })
+    async delete(@PathParam("id") id: number) {
+        try {
+            const user = await this.repo.getById(id);
+            user.active = 0;
+            this.repo.update(user);
+            return user;
+        } catch (error) {
+            console.log(error);
+            this.httpContext.response.sendStatus(500);
         }
     }
 
