# Back-end/Paradigm.Express.WebApi.Bootstrap-main/src/docs/swagger.yaml
@@ -1,12 +1,149 @@
 basePath: null
-definitions: {}
+definitions:
+    User:
+        description: ""
+        properties:
+            id:
+                type: number
+                format: double
+                description: ""
+            name:
+                type: string
+                description: ""
+            lastName:
+                type: string
+                description: ""
+            alias:
+                type: string
+                description: ""
+            mail:
+                type: string
+                description: ""
+            password:
+                type: string
+                description: ""
+            userType:
+                type: string
+                description: ""
+            active:
+                type: number
+                format: double
+                description: ""
+        type: object
+        required:
+            - id
+            - name
+            - lastName
+            - mail
+            - password
+            - userType
+            - active
 info:
     description: 'Paradigm API.'
     license:
         name: ISC
     title: paradigm-api
     version: 1.0.0
-paths: {}
+paths:
+    /api/health:
+        get:
+            operationId: HealthGet
+            produces:
+                - text/html
+            responses:
+                '204':
+                    description: 'No content'
+            description: ""
+            parameters: []
+    /users:
+        get:
+            operationId: UsersGet
+            produces:
+                - application/json
+            responses:
+                '200':
+                    description: Ok
+                    schema:
+                        type: array
+                        items:
+                            $ref: '#/definitions/User'
+            description: ""
+            parameters: []
+        post:
+            operationId: UsersPost
+            produces:
+                - application/json
+            responses:
+                '200':
+                    description: Ok
+                    schema:
+                        $ref: '#/definitions/User'
+            description: ""
+            consumes:
+                - application/json
+            parameters:
+                -
+                    description: ""
+                    in: body
+                    name: user
+                    required: true
+                    schema:
+                        $ref: '#/definitions/User'
+        put:
+            operationId: UsersUpdate
+            produces:
+                - application/json
+            responses:
+                '200':
+                    description: Ok
+                    schema:
+                        $ref: '#/definitions/User'
+            description: ""
+            consumes:
+                - application/json
+            parameters:
+                -
+                    description: ""
+                    in: body
+                    name: user
+                    required: true
+                    schema:
+                        $ref: '#/definitions/User'
+    '/users/{id}':
+        get:
+            operationId: UsersGetOne
+            produces:
+                - application/json
+            responses:
+                '200':
+                    description: Ok
+                    schema:
+                        $ref: '#/definitions/User'
+            description: ""
+            parameters:
+                -
+                    description: ""
+                    in: path
+                    name: id
+                    required: true
+                    type: number
+                    format: double
+        delete:
+            operationId: UsersDelete
+            produces:
+                - text/html
+            responses:
+                '204':
+                    description: 'No content'
+            description: ""
+            parameters:
+                -
+                    description: ""
+                    in: path
+                    name: id
+                    required: true
+                    type: number
+                    format: double
 swagger: '2.0'
 securityDefinitions:
     'client secret':
